# quant-team

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  pyproject.toml  run.py
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-stabilize-and-restructure/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  (+4 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
data/teams/: crypto.yaml  quant.yaml
quant_team/: __init__.py  orchestrator.py  research.py
quant_team/agents/: __init__.py  base.py  cio.py  macro.py  quant.py  risk.py
quant_team/api/: app.py  auth.py  schemas.py
quant_team/database/: connection.py  models.py
quant_team/market/: crypto_data.py  indicators.py  router.py  stock_data.py
quant_team/strategy/: ips.py
quant_team/teams/: registry.py
quant_team/templates/: analysis.html  base.html  dashboard.html  login.html  market.html  portfolio.html  research.html  summary.html  team_detail.html  trades.html
quant_team/trading/: execution.py  execution_router.py  pdt.py  portfolio_manager.py  risk.py
scripts/: hash_passwords.py
tests/: conftest.py  test_agent.py  test_auth.py  test_crypto_data.py  test_dashboard_api.py  test_execution.py  test_execution_router.py  test_models.py  test_orchestrator.py  test_registry.py  test_router.py  test_session_state.py
(+25 files in other folders)
